--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.2",
     "next": "^14.0.4",
-    "react": "latest",
-    "react-dom": "latest",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
     "svix": "^1.15.0",
     "tailwind-merge": "^1.14.0",
@@ -41,7 +41,7 @@
     "@types/react-dom": "latest",
     "autoprefixer": "latest",
     "eslint": "latest",
-    "eslint-config-next": "latest",
+    "eslint-config-next": "^14.0.4",
     "postcss": "latest",
     "tailwindcss": "latest",
     "typescript": "latest"
