--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-tailwindcss": "^3.13.0",
+    "html-react-parser": "^5.0.9",
     "lucide-react": "^0.279.0",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.2",
     "next": "^14.0.4",
+    "prismjs": "^1.29.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
